<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="12dp" >

        <TextView
            android:id="@+id/txtview_module_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_text_module_code"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edittxt_module_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:hint="@string/hint_module_code"
            android:inputType="textPersonName" >
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/txtview_assignment_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_text_assignment_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edittxt_assignment_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:hint="@string/hint_assignment_name"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txtview_marks_proportion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_text_marks_proportion"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edittxt_marks_proportion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:hint="@string/hint_marks_proportion"
            android:inputType="number" />

        <TextView
            android:id="@+id/txtview_when_due"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_text_when_due"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edittxt_when_due"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:hint="@string/hint_when_due"
            android:inputType="date" />

        <TextView
            android:id="@+id/txtview_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_text_progress"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edittxt_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:hint="@string/hint_progress"
            android:inputType="number" />
    </LinearLayout>

</ScrollView>